# BAGFD

./: .gitignore  README.md  pyproject.toml
.github/workflows/: tag-release.yml
src/bagfd/: __init__.py  cli.py  client.py  crypto.py  database.py  downloader.py  enums.py  fetchers.py  filter.py  models.py
tests/: test_bagfd.py  test_cli.py  test_client.py  test_database.py  test_downloader.py  test_fetchers.py  test_filter.py
